fix provider sign-up block width and faq block alignment

--- a/react/assets/forus-webshop/scss/style-webshop-kerstpakket-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-kerstpakket-vars.scss
@@ -330,8 +330,6 @@ $primaryColorLight: #9f3031;
     --product-title-color: var(--tc);
 
     // Faq
-    --faq-width: 820px;
-    --faq-align: center;
     --faq-header-color: #00122a;
     --faq-header-color-hover: var(--color-primary);
 
