--- a/react/assets/forus-webshop/scss/style-webshop-oostgelre-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-oostgelre-vars.scss
@@ -330,8 +330,6 @@ $primaryColorLight: #660066;
     --product-title-color: var(--tc);
 
     // Faq
-    --faq-width: 820px;
-    --faq-align: center;
     --faq-header-color: #00122a;
     --faq-header-color-hover: #660066;
 
