--- a/react/assets/forus-webshop/scss/style-webshop-potjeswijzer-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-potjeswijzer-vars.scss
@@ -329,8 +329,6 @@ $primaryColorLight: #b9cb18;
     --product-title-color: var(--tc);
 
     // Faq
-    --faq-width: 820px;
-    --faq-align: flex-start;
     --faq-header-color: #4990b5;
     --faq-header-color-hover: #4990b5;
 
