--- a/react/assets/forus-webshop/scss/style-webshop-waalwijk-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-waalwijk-vars.scss
@@ -329,8 +329,6 @@ $primaryColorLight: #2a2a7f;
     --product-title-color: var(--tc);
 
     // Faq
-    --faq-width: 820px;
-    --faq-align: center;
     --faq-header-color: #00122a;
     --faq-header-color-hover: var(--color-primary);
 
