--- a/react/assets/forus-webshop/scss/style-webshop-winterswijk-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-winterswijk-vars.scss
@@ -329,8 +329,6 @@ $primaryColorLight: #0c6dcb;
     --product-title-color: var(--tc);
 
     // Faq
-    --faq-width: 820px;
-    --faq-align: center;
     --faq-header-color: #00122a;
     --faq-header-color-hover: #0c6dcb;
 
